# svgym

./: .gitignore  LICENSE  README.md  pyproject.toml
demo/results/: demo_benchmarks.json  demo_results.json
docs/: index.html
docs/app/: build-pyodide.sh  build.sh  coi-serviceworker.js  index.html  svgym-worker.js
docs/app/svgym/: deterministic.py  tools.py
svgym/: __init__.py  cli.py  compare.py  compression_tools.py  config.py  hybrid.py  llm_client.py  optimizer.py  pack.py  prompts.py  render.py  render_bench.py  tools.py
tests/: test_paths_to_shapes.py  test_text_preserved.py
tests/parity/: README.md  coi-serviceworker.js  compare_parity.py  crossengine.html  crossengine_check.mjs  harness-canvas.html  harness.html  run_browser.mjs  run_native.py  svgym-browser.js  svgym-worker.js
